# ChangeLog for net-analyzer/argus-clients
# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/net-analyzer/argus-clients/ChangeLog,v 1.47 2012/09/07 23:38:57 blueness Exp $

  07 Sep 2012; Anthony G. Basile <blueness@gentoo.org>
  argus-clients-3.0.6.2.ebuild:
  Stable ppc, bug #434030

*argus-clients-3.0.7.1 (22 Aug 2012)

  22 Aug 2012; Jeroen Roovers <jer@gentoo.org> +argus-clients-3.0.7.1.ebuild:
  Version bump.

  04 Jul 2012; Jeff Horelick <jdhore@gentoo.org> argus-clients-3.0.6.1.ebuild:
  marked x86 per bug 422135

  20 Jun 2012; Agostino Sarubbo <ago@gentoo.org> argus-clients-3.0.6.1.ebuild:
  Stable for amd64, wrt bug #422135

*argus-clients-3.0.6.2 (19 Jun 2012)

  19 Jun 2012; Jeroen Roovers <jer@gentoo.org> +argus-clients-3.0.6.2.ebuild:
  Version bump.

  11 Jun 2012; Michael Weber <xmw@gentoo.org> argus-clients-3.0.4.1-r1.ebuild:
  ppc stable (bug 369587)

  09 May 2012; Jeroen Roovers <jer@gentoo.org> argus-clients-3.0.6.1.ebuild,
  metadata.xml:
  Add missing dependencies. Bring back sasl support. Make flow-tools dependency
  explicit and optional. Remove RDEPEND on net-analyzer/argus as it is not
  required at run time (could be a remote server).

  09 May 2012; Jeroen Roovers <jer@gentoo.org> -argus-clients-3.0.5.38.ebuild:
  Old.

*argus-clients-3.0.6.1 (09 May 2012)

  09 May 2012; Jeroen Roovers <jer@gentoo.org> +argus-clients-3.0.6.1.ebuild:
  Version bump.

*argus-clients-3.0.6 (17 Apr 2012)

  17 Apr 2012; Jeroen Roovers <jer@gentoo.org> -argus-clients-3.0.5.34.ebuild,
  -argus-clients-3.0.5.35.ebuild, +argus-clients-3.0.6.ebuild:
  Version bump.

*argus-clients-3.0.5.38 (04 Apr 2012)

  04 Apr 2012; Jeroen Roovers <jer@gentoo.org> +argus-clients-3.0.5.38.ebuild:
  Version bump.

*argus-clients-3.0.5.35 (13 Mar 2012)

  13 Mar 2012; Jeroen Roovers <jer@gentoo.org> -argus-clients-3.0.5.31.ebuild,
  -argus-clients-3.0.5.33.ebuild, +argus-clients-3.0.5.35.ebuild:
  Version bump.
