@@ -1,6 +1,9 @@
 # ChangeLog for net-analyzer/argus
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-analyzer/argus/ChangeLog,v 1.51 2012/09/07 23:37:46 blueness Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-analyzer/argus/ChangeLog,v 1.52 2012/09/08 12:36:01 ago Exp $
+
+  08 Sep 2012; Agostino Sarubbo <ago@gentoo.org> argus-3.0.6.1.ebuild:
+  Stable for amd64, wrt bug #434030
 
   07 Sep 2012; Anthony G. Basile <blueness@gentoo.org> argus-3.0.6.1.ebuild:
   Stable ppc, bug #434030
