@@ -1,6 +1,9 @@
 # ChangeLog for net-analyzer/argus-clients
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-analyzer/argus-clients/ChangeLog,v 1.47 2012/09/07 23:38:57 blueness Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-analyzer/argus-clients/ChangeLog,v 1.48 2012/09/08 12:36:21 ago Exp $
+
+  08 Sep 2012; Agostino Sarubbo <ago@gentoo.org> argus-clients-3.0.6.2.ebuild:
+  Stable for amd64, wrt bug #434030
 
   07 Sep 2012; Anthony G. Basile <blueness@gentoo.org>
   argus-clients-3.0.6.2.ebuild:
